discussion/kv_engine/168585/168585_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Decouple vbucket.h from kv_bucket.h

kv_bucket.h is one of the most expensive headers to compile in an
'everything' build of kv_engine, second only to GTest.h:

    ** Expensive headers:
    25140 ms: tlm/deps/googletest.exploded/include/gmock/gmock.h (included 58 times, avg 433 ms), included via:
    22681 ms: ../kv_engine/engines/ep/src/kv_bucket.h (included 44 times, avg 515 ms), included via:

52% of the include cost of kv_bucket.h is including the header
vbucket.h.

Restructure headers so kv_bucket.h doesn't need to include vbucket.h,
mostly by moving the types it does need into their own vbucket_types.h
header.

This makes the cost to include kv_bucket.h around half of what it
previously was.

Change-Id: Ice3ea6c8a251cac6ebbf9e0d7ddb8a621e9efc38

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-01-12 15:43:39.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-12 16:18:06.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24851/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17525/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17525/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14774/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:57:17: error: use of undeclared identifier "VBucket" [clang-diagnostic-error]
                VBucket&)>;
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:57:25: error: expected expression [clang-diagnostic-error]
                VBucket&)>;
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:59:14: error: unknown type name "SyncWriteTimeoutHandlerFactory" [clang-diagnostic-error]
extern const SyncWriteTimeoutHandlerFactory NoopSyncWriteTimeoutFactory;
             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14774/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:57:17:
error: use of undeclared identifier "VBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14774/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42755/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0025/0093]: test producer disk backfill buffer limits...(28 ms) OK


99% tests passed, 1 tests failed out of 420

Total Test time (real) = 366.47 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42755/ )

Timeout of a CTest test 420/420 Test #289: ep_testsuite_dcp.ephemeral.comp_passive .......................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42755/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13620/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36230/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4477/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4419/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16438/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15580/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16729/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
